Created associations, ddded ser & encaps for response bodies.